--- a/themes/KeepItNew/assets/css/_common/_core/base.scss
+++ b/themes/KeepItNew/assets/css/_common/_core/base.scss
@@ -2,16 +2,16 @@
 
 	/* Lato */
 	@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
-	
+
 	/* Montserrat */
 	@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800);
-	
+
 	/* Roboto */
 	@import url(https://fonts.googleapis.com/css?family=Roboto:400,900);
 
-  
- 
-  
+
+
+
   html {
     &::-webkit-scrollbar {
       width: 8px;
@@ -26,19 +26,19 @@
       }
     }
   }
-  
+
   ::selection {
     background: rgba(0, 149, 255, 0.1);
   }
-  
+
   html {
     font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Helvetica Neue", "PingFang SC", "Hiragino Sans GB", STHeiti, "Microsoft Yahei", "WenQuanYi Micro Hei", Arial, Verdana, sans-serif;
   }
-  
+
   body {
     font-size: 11pt;
     font-weight: 400;
-    line-height: 2em;
+    line-height: 1.8em;
     background-color: $light-background-color;
     color: $light-font-color;
     &:before {
@@ -65,7 +65,7 @@
         color: $dark-font-color;
      }
   }
-  
+
   a {
     color: $light-global-link-color;
     text-decoration: none;
@@ -88,7 +88,7 @@
       }
     }
   }
-  
+
   blockquote {
     font-size: 1rem;
     display: block;
@@ -96,7 +96,7 @@
     border-style: solid;
     border-color: $light-border-color;
     padding: 1.5em 1.2em 0.5em 1.2em;
-    margin: 0 0 2em 0;
+    margin: 2em 0 2em 0;
     position: relative;
 
     &:before {
@@ -110,13 +110,13 @@
       font: 6em/1.08em 'PT Sans', sans-serif;
       color: $light-post-link-color;
       text-align: center;
-      
+
        .dark-theme &{
          color: $dark-post-link-color;
        }
     }
     &:after {
-      content: "#blockquote" attr(cite);
+      content: "--" attr(cite);
       display: block;
       text-align: right;
       font-size: 0.875em;
