--- a/themes/KeepItNew/layouts/_default/single.html
+++ b/themes/KeepItNew/layouts/_default/single.html
@@ -4,7 +4,7 @@
     <header class="post-header">
         <h1 class="post-title">{{ .Title }}</h1>
         <div class="post-meta">
-            {{ i18n "Written" }} {{ i18n "by" }} <a href="{{.Site.BaseURL }}" rel="author">{{ if isset .Params "author" }}{{ .Params.author }}{{ else }}{{ .Site.Params.author }}{{ end }}</a> {{ i18n "with" }} ♥ 
+            {{ i18n "Written" }} {{ i18n "by" }} <a href="{{.Site.BaseURL }}" rel="author">{{ if isset .Params "author" }}{{ .Params.author }}{{ else }}{{ .Site.Params.author }}{{ end }}</a> {{ i18n "with" }} ♥
                 <span class="post-time">
                     {{ i18n "on" }} <time datetime={{.Date.Format (.Site.Params.dateFormatToUse | default "2006-01-02") }} >{{ .Date.Format (.Site.Params.dateFormatToUse | default "2 January 2006") }}</time>
                 </span>
@@ -25,6 +25,19 @@
         </div>
     </header>
     <div class="post-content">
+
+        {{ if eq .Params.toc true }}
+        <details class='entry-toc'>
+        <summary>
+            <span>
+            Table of Contents
+            </span>
+        </summary>
+        {{ .TableOfContents }}
+        </details>
+        {{ end }}
+
+
         <!--featured_image-->
 
         {{ $images := findRE "<img src=\"[^\"|\\\"]*\"" .Content -}}
@@ -37,31 +50,31 @@
           <img src="{{ printf "%s%s" $cdn_url $img }}" class="featured_image">
         {{ end }}
         <!-- end featured_image-->
-     
+
           {{ $reAltIn := "<img src=\"([^\"]+)\" alt=\"([^\"]+)?\" />" }}
           {{ $reAltOut :=  ( printf "<figure><img src=\"/images/ring.svg\" data-sizes=\"auto\" data-src=\"%s$1\" alt=\"$2\" class=\"lazyload\"><figcaption class=\"image-caption\">$2</figcaption></figure>" $cdn_url ) }}
           {{ $altContent := .Content | replaceRE $reAltIn $reAltOut | safeHTML }}
 
           {{ $reAltTitleIn := "<img src=\"([^\"]+)\" alt=\"([^\"]+)?\" title=\"([^\"]+)?\" />" }}
-          {{ $reAltTitleOut := ( printf "<figure><img src=\"/images/ring.svg\" data-src=\"%s$1\" data-sizes=\"auto\" alt=\"$2\" title=\"$3\" class=\"lazyload\"><figcaption class=\"image-caption\">$2</figcaption></figure>" $cdn_url ) }}
+          {{ $reAltTitleOut := ( printf "<figure><img src=\"/images/ring.svg\" data-src=\"%s$1\" data-sizes=\"auto\" alt=\"$2\" title=\"$3\" class=\"lazyload\"><figcaption class=\"image-caption\">$3</figcaption></figure>" $cdn_url ) }}
           {{ $finalContent := $altContent | replaceRE $reAltTitleIn $reAltTitleOut | safeHTML }}
 
           {{ $finalContent }}
     </div>
 
     <div class="post-copyright">
-            {{ with .Site.Params.author }} 
+            {{ with .Site.Params.author }}
             <p class="copyright-item">
                 <span>{{ i18n "Author" }}:</span>
                 <span>{{ . }} </span>
                 </p>
             {{ end }}
-           
+
             <p class="copyright-item">
                     <span>{{ i18n "Words" }}:</span>
                    <span>{{ .WordCount }}</span>
             </p>
-            
+
             <p class="copyright-item">
                 {{ if $.Param "socialShare" }}
                 <span>{{ i18n "Share" }}:</span>
@@ -69,18 +82,18 @@
             </p>
                        {{ end }}
 
-            {{ with .Site.Params.license }} 
+            {{ with .Site.Params.license }}
             <p class="copyright-item">
                 {{ . | safeHTML}}
             </p>
             {{ end }}
     </div>
 
-  
+
     <div class="post-tags">
         {{ with .Params.tags }}
             <section>
-            <i class="iconfont icon-icon-tag"></i>{{ i18n "Tag" }}: 
+            <i class="iconfont icon-icon-tag"></i>{{ i18n "Tag" }}:
             {{ range . }}
             <span class="tag"><a href="{{ "tags/" | absURL }}{{ . | urlize }}/">
                     #{{.}}</a></span>
@@ -88,7 +101,7 @@
             </section>
         {{ end }}
         <section>
-                <a href="javascript:window.history.back();">{{ i18n "back" }}</a></span> · 
+                <a href="javascript:window.history.back();">{{ i18n "back" }}</a></span> ·
                 <span><a href="{{ .Site.BaseURL }}">{{ i18n "Home" }}</a></span>
         </section>
     </div>
@@ -96,7 +109,7 @@
     <div class="post-nav">
         {{ if .PrevInSection }}
         <a href="{{.PrevInSection.Permalink}}" class="prev" rel="prev" title="{{ .PrevInSection.Title}}"><i class="iconfont icon-dajiantou"></i>&nbsp;{{ .PrevInSection.Title}}</a>
-        {{ end }} 
+        {{ end }}
         {{ if .NextInSection }}
         <a href="{{.NextInSection.Permalink}}" class="next" rel="next" title="{{.NextInSection.Title}}">{{.NextInSection.Title}}&nbsp;<i class="iconfont icon-xiaojiantou"></i></a>
         {{ end }}
