larger margins between paragraphs

--- a/themes/KeepItNew/assets/css/_common/_page/post.scss
+++ b/themes/KeepItNew/assets/css/_common/_page/post.scss
@@ -168,7 +168,7 @@
 
     p {
         font-size: 1em;
-        margin: .5em 0 .5em 0;
+        margin: 1em 0 1em 0;
     }
 
     .post-copyright {
