--- a/themes/KeepItNew/assets/css/_common/_page/post.scss
+++ b/themes/KeepItNew/assets/css/_common/_page/post.scss
@@ -85,7 +85,7 @@
 
         code,
         pre {
-            padding: 7px;
+            padding: 2px;
             font-size: 13px;
             font-family: Consolas, Monaco, Menlo, Consolas, monospace;
             word-break: break-all;
@@ -93,12 +93,12 @@
         }
 
         code:not([class]) {
-            padding: 5px 5px;
-            background: #fff;
-            border: 1px solid #ddd;
-            box-shadow: 1px 1px 0 #fff, 2px 2px 0 #ddd;
-            margin-left: 3px;
-            margin-right: 3px;
+            //padding: 5px 5px;
+            background: rgba(27,31,35,.05);
+            //border: 1px solid #ddd;
+            //box-shadow: 1px 1px 0 #fff, 2px 2px 0 #ddd;
+            // margin-left: 3px;
+            // margin-right: 3px;
 
             .dark-theme &:not([class]) {
                 background: transparent;
