--- a/themes/KeepItNew/assets/css/_common/_page/post.scss
+++ b/themes/KeepItNew/assets/css/_common/_page/post.scss
@@ -101,8 +101,8 @@
             // margin-right: 3px;
 
             .dark-theme &:not([class]) {
-                background: transparent;
-                box-shadow: 1px 1px 0 $dark-font-secondary-color, 2px 2px 0 $dark-font-secondary-color;
+                background: rgba(200,200,200,.1);
+                //box-shadow: 1px 1px 0 $dark-font-secondary-color, 2px 2px 0 $dark-font-secondary-color;
             }
         }
 
