GA and code styles

--- a/themes/KeepItNew/assets/css/_common/_prettyprint/default.scss
+++ b/themes/KeepItNew/assets/css/_common/_prettyprint/default.scss
@@ -1,118 +1,124 @@
-/*
- * Derived from einaros's Sons of Obsidian theme at
- * http://studiostyl.es/schemes/son-of-obsidian by
- * Alex Ford of CodeTunnel:
- * http://CodeTunnel.com/blog/post/71/google-code-prettify-obsidian-theme
- */
+/*! Color themes for Google Code Prettify | MIT License | github.com/jmblog/color-themes-for-google-code-prettify */
+.prettyprint {
+    background: #f5f5f5;
+    font-family: Menlo, "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Monaco, Consolas, monospace;
+    border: 0 !important;
+  }
 
- .str
- {
-     color: #EC7600;
- }
- .kwd
- {
-     color: #93C763;
- }
- .com
- {
-     color: #66747B;
- }
- .typ
- {
-     color: #678CB1;
- }
- .lit
- {
-     color: #FACD22;
- }
- .pun
- {
-     color: #F1F2F3;
- }
- .pln
- {
-     color: #F1F2F3;
- }
- .tag
- {
-     color: #8AC763;
- }
- .atn
- {
-     color: #E0E2E4;
- }
- .atv
- {
-     color: #EC7600;
- }
- .dec
- {
-     color: purple;
- }
- pre.prettyprint
- {
-     border: 0px solid #888;
- }
- ol.linenums
- {
-     margin-top: 0;
-     margin-bottom: 0;
- }
- .prettyprint {
-     background: #000;
- }
- li.L0, li.L1, li.L2, li.L3, li.L4, li.L5, li.L6, li.L7, li.L8, li.L9
- {
-     color: #555;
-     list-style-type: decimal;
- }
- li.L1, li.L3, li.L5, li.L7, li.L9 {
-     background: #111;
- }
- @media print
- {
-     .str
-     {
-         color: #060;
-     }
-     .kwd
-     {
-         color: #006;
-         font-weight: bold;
-     }
-     .com
-     {
-         color: #600;
-         font-style: italic;
-     }
-     .typ
-     {
-         color: #404;
-         font-weight: bold;
-     }
-     .lit
-     {
-         color: #044;
-     }
-     .pun
-     {
-         color: #440;
-     }
-     .pln
-     {
-         color: #000;
-     }
-     .tag
-     {
-         color: #006;
-         font-weight: bold;
-     }
-     .atn
-     {
-         color: #404;
-     }
-     .atv
-     {
-         color: #060;
-     }
- }
+  .pln {
+    color: #333;
+  }
+
+  /* Specify class=linenums on a pre to get line numbering */
+  ol.linenums {
+    margin-top: 0;
+    margin-bottom: 0;
+    color: #cccccc;
+  }
+
+  li.L0,
+  li.L1,
+  li.L2,
+  li.L3,
+  li.L4,
+  li.L5,
+  li.L6,
+  li.L7,
+  li.L8,
+  li.L9 {
+    padding-left: 1em;
+    background-color: #fff;
+    list-style-type: decimal;
+  }
+  li.L1,
+  li.L3,
+  li.L5,
+  li.L7,
+  li.L9 { background: #f5f5f5 }
+
+  @media screen {
+
+    /* string content */
+
+    .str {
+      color: #183691;
+    }
+
+    /* keyword */
+
+    .kwd {
+      color: #a71d5d;
+    }
+
+    /* comment */
+
+    .com {
+      color: #969896;
+    }
+
+    /* type name */
+
+    .typ {
+      color: #0086b3;
+    }
+
+    /* literal value */
+
+    .lit {
+      color: #0086b3;
+    }
+
+    /* punctuation */
+
+    .pun {
+      color: #333;
+    }
+
+    /* lisp open bracket */
+
+    .opn {
+      color: #333;
+    }
+
+    /* lisp close bracket */
+
+    .clo {
+      color: #333;
+    }
+
+    /* markup tag name */
+
+    .tag {
+      color: #000080;
+    }
+
+    /* markup attribute name */
+
+    .atn {
+      color: #795da3;
+    }
+
+    /* markup attribute value */
+
+    .atv {
+      color: #183691;
+    }
+
+    /* declaration */
+
+    .dec {
+      color: #333;
+    }
+
+    /* variable name */
+
+    .var {
+      color: #008080;
+    }
+
+    /* function name */
+
+    .fun {
+      color: #900;
+    }
+  }
