sass is confusing

--- a/themes/KeepItNew/assets/css/_common/_core/base.scss
+++ b/themes/KeepItNew/assets/css/_common/_core/base.scss
@@ -116,19 +116,8 @@
        }
     }
 
-    $cite_attr: attr(cite);
-    @mixin cite_mixin($cite_attr) {
-      @if not $cite_attr {
-        content: "--" attr(cite);
-      } @else {
-        content: " ";
-        padding-bottom: 10px;
-      }
-    }
-
     &:after {
-      @include cite_mixin(attr(cite));
-      //content: "--" attr(cite);
+      content: attr(cite);
       display: block;
       text-align: right;
       font-size: 0.875em;
