--- a/themes/KeepItNew/assets/css/_common/_core/base.scss
+++ b/themes/KeepItNew/assets/css/_common/_core/base.scss
@@ -118,6 +118,7 @@
 
     &:after {
       content: attr(cite);
+      padding-bottom: 5px;
       display: block;
       text-align: right;
       font-size: 0.875em;
