Blockquote citation semantics and compress pupper image

--- a/themes/KeepItNew/assets/css/_common/_core/base.scss
+++ b/themes/KeepItNew/assets/css/_common/_core/base.scss
@@ -116,12 +116,12 @@
        }
     }
 
-    &:after {
-      content: attr(cite);
+    & > .cite {
       padding-bottom: 5px;
       display: block;
       text-align: right;
       font-size: 0.875em;
+      font-style: normal;
       color: $light-post-link-color;
 
        .dark-theme &{
