--- a/themes/KeepItNew/assets/css/_common/_core/layout.scss
+++ b/themes/KeepItNew/assets/css/_common/_core/layout.scss
@@ -1,12 +1,12 @@
   /** Layout **/
-  
+
   .wrapper {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     width: 100%;
   }
-  
+
   .navbar {
     height: 4rem;
     line-height: 4rem;
@@ -17,10 +17,10 @@
       text-align: center;
       margin: 0 auto;
       display: flex;
-      justify-content: space-between; 
+      justify-content: space-between;
     }
   }
-  
+
   .main {
     flex: 1 0 auto;
   }
@@ -28,16 +28,21 @@
     padding-left: 1em;
     padding-right: 1em;
   }
-  
+
   .footer {
     height: 4rem;
     width: 100%;
+    max-width: 1200px;
     text-align: center;
-    line-height: 4rem;
+    line-height: 1.5rem;
     padding-top: 2em;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
-  
-  
+
+
   .notfound {
     font-size: 2em;
     transform: translateY(35vh);
