--- a/themes/KeepItNew/assets/css/_common/_section/footer.scss
+++ b/themes/KeepItNew/assets/css/_common/_section/footer.scss
@@ -4,6 +4,10 @@
     font-size: 14px;
   }
 
+  .footer-social > a {
+    padding: 0.3em;
+  }
+
   #dynamic-to-top {
     display: none;
     overflow: hidden;
