--- a/themes/KeepItNew/layouts/partials/head.html
+++ b/themes/KeepItNew/layouts/partials/head.html
@@ -32,7 +32,7 @@
   <meta name="title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else if .Params.heading }}{{ .Params.heading }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end}}">
   {{ partial "css" . }}
   {{ with .OutputFormats.Get "RSS" }}
-  <link rel="{{ .Rel }}"" href="{{ .RelPermalink }}" type="application/rss+xml" title="{{ site.Title }}">
+  <link rel="{{ .Rel }}" href="{{ .RelPermalink }}" type="application/rss+xml" title="{{ site.Title }}">
   {{ end }}
   {{- template "_internal/twitter_cards.html" . }}
   {{ partial "seo_schema" . }}
