--- a/themes/KeepItNew/layouts/_default/baseof.html
+++ b/themes/KeepItNew/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}">
+<html lang="{{ .Site.Language }}">
   {{ partial "head.html" . }}
   <body class="">
     <div class="wrapper">
