Fix target _blank duplication

--- a/themes/KeepItNew/layouts/partials/social.html
+++ b/themes/KeepItNew/layouts/partials/social.html
@@ -1,17 +1,17 @@
 {{ with .Site.Params.Social.Github }}
-<a href="https://github.com/{{.}}" target="_blank" rel="me noopener noreferrer" target="_blank"><i class="iconfont icon-github"></i></a>
+<a href="https://github.com/{{.}}" target="_blank" rel="me noopener noreferrer"><i class="iconfont icon-github"></i></a>
 {{ end }}
 {{ with .Site.Params.Social.LinkedIn }}
-<a href="https://linkedin.com/in/{{.}}" target="_blank" rel="me noopener noreferrer" target="_blank"><i class="iconfont icon-linkedin"></i></a>
+<a href="https://linkedin.com/in/{{.}}" target="_blank" rel="me noopener noreferrer"><i class="iconfont icon-linkedin"></i></a>
 {{ end }}
 {{ with .Site.Params.Social.Twitter }}
-<a href="https://twitter.com/{{.}}" target="_blank" rel="me noopener noreferrer" target="_blank"><i class="iconfont icon-twitter"></i></a>
+<a href="https://twitter.com/{{.}}" target="_blank" rel="me noopener noreferrer" ><i class="iconfont icon-twitter"></i></a>
 {{ end }}
 {{ with .Site.Params.Social.Instagram }}
-<a href="https://www.instagram.com/{{.}}/" target="_blank" rel="me noopener noreferrer" target="_blank"><i class="iconfont icon-instagram"></i></a>
+<a href="https://www.instagram.com/{{.}}/" target="_blank" rel="me noopener noreferrer"><i class="iconfont icon-instagram"></i></a>
 {{ end }}
 {{ with .Site.Params.Social.Email}}
-<a href="mailto:{{.}}" rel="me noopener noreferrer"><i class="iconfont icon-mail" target="_blank"></i></a>
+<a href="mailto:{{.}}" rel="me noopener noreferrer"><i class="iconfont icon-mail"></i></a>
 {{ end }}
 {{ with .Site.Params.Social.Facebook}}
 <a href="https://facebook.com/{{.}}" rel="me noopener noreferrer" target="_blank"><i class="iconfont icon-facebook"></i></a>
