Bunch of style updates.

--- a/themes/KeepItNew/assets/css/_common/_core/base.scss
+++ b/themes/KeepItNew/assets/css/_common/_core/base.scss
@@ -91,20 +91,24 @@
 
   blockquote {
     font-size: 1rem;
+    font-style: italic;
     display: block;
-    border-width: 1px 0;
+    border-width: 1px;
     border-style: solid;
     border-color: $light-border-color;
-    padding: 1.5em 1.2em 0.5em 1.2em;
-    margin: 2em 0 2em 0;
+    border-left: 8px solid $light-blockquote-side-color;
+    padding: 1.2em 30px 1.2em 65px;
+    margin: 30px auto;
     position: relative;
+    background: $light-blockquote-background-color;
 
     &:before {
-      content: '\201C';
+      content: "\201C";
+      color: #78C0A8;
+      font-size: 4em;
       position: absolute;
-      top: 0em;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      left: 10px;
+      top: 15px;
       width: 3rem;
       height: 2rem;
       font: 6em/1.08em 'PT Sans', sans-serif;
@@ -114,6 +118,14 @@
        .dark-theme &{
          color: $dark-post-link-color;
        }
+    }
+
+    & > p {
+      margin-block-start: 0px;
+      margin-block-end: 0px;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+      margin-top: 0px;
     }
 
     & > .cite {
@@ -131,5 +143,7 @@
 
     .dark-theme & {
       border-color: $dark-border-color;
+      background: $dark-blockquote-background-color;
+      border-left: 8px solid $dark-blockquote-side-color;
     }
   }
