--- a/themes/KeepItNew/layouts/_default/single.html
+++ b/themes/KeepItNew/layouts/_default/single.html
@@ -15,13 +15,13 @@
                         {{ range . }}
                         {{- $name := . -}}
                         {{- with $.Site.GetPage "taxonomy" (printf "categories/%s" $name) | default ($.Site.GetPage "taxonomy" (printf "categories/%s" ($name | urlize))) -}}
-                          <a href="{{ .Permalink }}"> &nbsp;{{ $name }} </a>
+                          <a href="{{ .Permalink }}"> {{ $name }} </a>
                         {{ end -}}
                         {{ end }}
                 </span>
                 {{- end }}
-                <i class="iconfont icon-timer"></i>
-                &nbsp;{{.ReadingTime }} min
+                &nbsp;<i class="iconfont icon-timer"></i>
+                {{.ReadingTime }} min
         </div>
     </header>
     <div class="post-content">
@@ -63,24 +63,25 @@
     </div>
 
     <div class="post-copyright">
+        <div class="author">
+            <figure class="author-image">
+                <a href="/about" class="image" alt="Josh Michielsen's Picture" style="background-image: url(https://en.gravatar.com/userimage/8133404/d27164df1e597dbc0bd9d5f43bb67bab.jpg)">
+                <span class="hidden">Josh Michielsen's Picture</span></a>
+            </figure>
+        </div>
 
-            <p class="copyright-item">
-                    <span>{{ i18n "Words" }}:</span>
-                   <span>{{ .WordCount }}</span>
-            </p>
+        <p class="copyright-item">
+            {{ if $.Param "socialShare" }}
+            <h4>{{ i18n "Share" }} This Post:</h4>
+            <span class="share-icons">{{ partial "share-links" . }}</span>
+        </p>
+                    {{ end }}
 
-            <p class="copyright-item">
-                {{ if $.Param "socialShare" }}
-                <span>{{ i18n "Share" }}:</span>
-                <span>{{ partial "share-links" . }}</span>
-            </p>
-                       {{ end }}
-
-            {{ with .Site.Params.license }}
-            <p class="copyright-item">
-                {{ . | safeHTML}}
-            </p>
-            {{ end }}
+        {{ with .Site.Params.license }}
+        <p class="copyright-item">
+            {{ . | safeHTML}}
+        </p>
+        {{ end }}
     </div>
 
 
