--- a/themes/KeepItNew/assets/css/_common/_core/layout.scss
+++ b/themes/KeepItNew/assets/css/_common/_core/layout.scss
@@ -11,13 +11,18 @@
     height: 4rem;
     line-height: 4rem;
     width: 100%;
+    background: $light-nav-background-color;
     .container {
       width: auto;
-      max-width: 1200px;
+      max-width: 900px;
       text-align: center;
       margin: 0 auto;
       display: flex;
       justify-content: space-between;
+    }
+
+    .dark-theme & {
+      background: $dark-nav-background-color;
     }
   }
 
@@ -32,7 +37,7 @@
   .footer {
     height: 4rem;
     width: 100%;
-    max-width: 1200px;
+    max-width: 900px;
     text-align: center;
     line-height: 1.5rem;
     padding-top: 2em;
