--- a/themes/KeepItNew/assets/css/_common/_page/post.scss
+++ b/themes/KeepItNew/assets/css/_common/_page/post.scss
@@ -166,18 +166,79 @@
         }
     }
 
+    blockquote {
+        p {
+            margin: 0 0 0 0;
+        }
+    }
+
     p {
         font-size: 1em;
         margin: 1em 0 1em 0;
     }
 
     .post-copyright {
-        margin-top: 5rem;
+        margin-top: 7rem;
         border-top: 1px solid $light-border-color;
         border-bottom: 1px solid $light-border-color;
 
         .copyright-item {
-            margin: 5px 0;
+            margin: 20px 0;
+        }
+
+       .share-icons {
+           .iconfont {
+                font-size: 1.8rem;
+                display: inline-block;
+                margin: 0.5em 0.2em 0 0;
+                color: $light-post-link-color;
+                text-decoration: none;
+
+                .dark-theme & {
+                    color: $dark-post-link-color;
+                }
+           }
+        }
+
+        .author {
+            position: relative;
+        }
+
+        .author-image {
+            box-sizing: border-box;
+            display: block;
+            position: absolute;
+            top: -60px;
+            left: 50%;
+            margin-left: -40px;
+            width: 80px;
+            height: 80px;
+            border-radius: 100%;
+            overflow: hidden;
+            padding: 6px;
+            background: $light-border-color;
+            z-index: 2;
+            box-shadow: $light-nav-background-color 0 0 0 1px;
+
+            .dark-theme & {
+                background: $dark-border-color;
+                box-shadow: $dark-border-color 0 0 0 1px;
+            }
+
+            .image {
+                position: relative;
+                display: block;
+                width: 100%;
+                height: 100%;
+                background-size: cover;
+                background-position: center center;
+                border-radius: 100%;
+
+                .hidden {
+                    display: none;
+                }
+
+            }
         }
 
         .dark-theme & {
