--- a/themes/KeepItNew/assets/css/_variables/default.scss
+++ b/themes/KeepItNew/assets/css/_variables/default.scss
@@ -1,6 +1,7 @@
 /** light theme **/
 
 $light-background-color: #fff;
+$light-nav-background-color: #eee;
 
 $light-font-color: #161209;
 $light-font-secondary-color: #a9a9b3;
@@ -17,12 +18,15 @@ $light-pagination-link-color : #2d96bd;
 $light-pagination-link-active-color: #000;
 
 $light-border-color: #dcdcdc;
+$light-blockquote-background-color: rgb(241, 241, 241);
+$light-blockquote-side-color: #78C0A8;
 
 
 
 /** dark theme **/
 
 $dark-background-color: #292a2d;
+$dark-nav-background-color: #3c3e42;
 
 $dark-font-color: #a9a9b3;
 $dark-font-secondary-color: #87878d;
@@ -39,3 +43,5 @@ $dark-pagination-link-color : #a9a9b3;
 $dark-pagination-link-active-color: #fff;
 
 $dark-border-color: #4a4b50;
+$dark-blockquote-background-color: #424242;
+$dark-blockquote-side-color: rgb(224, 121, 169);
