--- a/themes/KeepItNew/assets/css/_common/_core/base.scss
+++ b/themes/KeepItNew/assets/css/_common/_core/base.scss
@@ -147,3 +147,32 @@
       border-left: 8px solid $dark-blockquote-side-color;
     }
   }
+
+@each $type, $color in (
+  "info": #d1ecf1,
+  "warning": #fff3cd,
+  "danger": #f8d7da,
+) {
+  .tip.#{$type} {
+    background-color: $color;
+    border: 1px solid darken($color, 10%);
+    border-radius: 4px;
+    padding: 15px 20px;
+    color: darken($color, 60%);
+
+    a {
+      border-bottom: 1px solid darken($color, 30%);
+
+      &:hover, &:focus, &:active {
+        color: darken($color, 70%);
+        border-bottom: 1px solid darken($color, 40%);
+      }
+    }
+
+    .dark-theme & {
+      background-color: darken($color, 75%);
+      color: $color;
+      border: 1px solid darken($color, 50%);
+    }
+  }
+}
