--- a/themes/KeepItNew/assets/css/_common/_core/media.scss
+++ b/themes/KeepItNew/assets/css/_common/_core/media.scss
@@ -14,7 +14,7 @@
             margin: 0;
             height: 5em;
             line-height: 5.5em;
-            background: $light-background-color;
+            background: $light-nav-background-color;
 
             .navbar-header {
                 display: flex;
@@ -24,6 +24,7 @@
                 padding-right: 1em;
                 padding-left: 1em;
                 box-sizing: border-box;
+                background: $light-nav-background-color;
 
 
                 .menu-toggle {
@@ -83,7 +84,7 @@
 
             .menu {
                 text-align: center;
-                background: #ffffff;
+                background: $light-nav-background-color;
                 border-top: 2px solid #000000;
                 padding-top: 1em;
                 padding-bottom: 1em;
