--- a/themes/KeepItNew/assets/css/_common/_prettyprint/default.scss
+++ b/themes/KeepItNew/assets/css/_common/_prettyprint/default.scss
@@ -3,17 +3,20 @@
     background: #f5f5f5;
     font-family: Menlo, "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Monaco, Consolas, monospace;
     border: 0 !important;
+
+    .dark-theme & {
+      background: #1d1f21;
+      font-family: Menlo, "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Monaco, Consolas, monospace;
+      border: 0 !important;
+    }
   }
 
   .pln {
     color: #333;
-  }
 
-  /* Specify class=linenums on a pre to get line numbering */
-  ol.linenums {
-    margin-top: 0;
-    margin-bottom: 0;
-    color: #cccccc;
+    .dark-theme & {
+      color: #c5c8c6;
+    }
   }
 
   li.L0,
@@ -27,14 +30,14 @@
   li.L8,
   li.L9 {
     padding-left: 1em;
-    background-color: #fff;
+    background-color: #f5f5f5;
     list-style-type: decimal;
   }
-  li.L1,
-  li.L3,
-  li.L5,
-  li.L7,
-  li.L9 { background: #f5f5f5 }
+  // li.L1,
+  // li.L3,
+  // li.L5,
+  // li.L7,
+  // li.L9 { background: #f5f5f5 }
 
   @media screen {
 
@@ -42,83 +45,139 @@
 
     .str {
       color: #183691;
+
+      .dark-theme & {
+        color: #b5bd68;
+      }
     }
 
     /* keyword */
 
     .kwd {
       color: #a71d5d;
+
+      .dark-theme & {
+        color: #b294bb;
+      }
     }
 
     /* comment */
 
     .com {
       color: #969896;
+
+      .dark-theme & {
+        color: #969896;
+      }
     }
 
     /* type name */
 
     .typ {
       color: #0086b3;
+
+      .dark-theme &{
+        color: #81a2be;
+      }
     }
 
     /* literal value */
 
     .lit {
       color: #0086b3;
+
+      .dark-theme & {
+        color: #de935f;
+      }
     }
 
     /* punctuation */
 
     .pun {
       color: #333;
+
+      .dark-theme & {
+        color: #c5c8c6;
+      }
     }
 
     /* lisp open bracket */
 
     .opn {
       color: #333;
+
+      .dark-theme & {
+        color: #c5c8c6;
+      }
     }
 
     /* lisp close bracket */
 
     .clo {
       color: #333;
+
+      .dark-theme & {
+        color: #c5c8c6;
+      }
     }
 
     /* markup tag name */
 
     .tag {
       color: #000080;
+
+      .dark-theme & {
+        color: #cc6666;
+      }
     }
 
     /* markup attribute name */
 
     .atn {
       color: #795da3;
+
+      .dark-theme & {
+        color: #de935f;
+      }
     }
 
     /* markup attribute value */
 
     .atv {
       color: #183691;
+
+      .dark-theme & {
+        color: #8abeb7;
+      }
     }
 
     /* declaration */
 
     .dec {
       color: #333;
+
+      .dark-theme & {
+        color: #de935f;
+      }
     }
 
     /* variable name */
 
     .var {
       color: #008080;
+
+      .dark-theme & {
+        color: #cc6666;
+      }
     }
 
     /* function name */
 
     .fun {
       color: #900;
+
+      .dark-theme & {
+        color: #81a2be;
+      }
     }
   }
