--- a/themes/KeepItNew/assets/css/_common/_page/post.scss
+++ b/themes/KeepItNew/assets/css/_common/_page/post.scss
@@ -86,31 +86,32 @@
             }
         }
 
-        .prettyprint {
-            padding: 1.2em;
-            border-radius: 8px;
+        .chroma {
+            padding: 1em;
+            border-radius: 4px;
         }
 
         code,
         pre {
-            padding: 2px;
-            font-size: 1em;
-            font-family: Consolas, Monaco, Menlo, Consolas, monospace;
+            font-size: 14px;
+            font-family: Menlo, "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Monaco, Consolas, monospace;
             word-break: break-all;
             word-wrap: break-word;
-            border-radius: 4px;
+            border-radius: 2px;
         }
 
         code:not([class]) {
+            padding: 3px;
             //padding: 5px 5px;
-            background: rgba(27,31,35,.05);
-            //border: 1px solid #ddd;
+            background: $light-code-bg-color;
+            border: 1px solid #eee;
             //box-shadow: 1px 1px 0 #fff, 2px 2px 0 #ddd;
             // margin-left: 3px;
             // margin-right: 3px;
 
             .dark-theme &:not([class]) {
-                background: rgba(200,200,200,.1);
+                background: $dark-code-bg-color;
+                border: 1px solid #444;
                 //box-shadow: 1px 1px 0 $dark-font-secondary-color, 2px 2px 0 $dark-font-secondary-color;
             }
         }
@@ -134,11 +135,27 @@
 
         figure {
             text-align: center;
+            .img-container {
+                margin: auto;
+                width: 95%;
+                overflow: hidden;
+                border: 4px solid #eee;
+                border-radius: 8px;
+
+                .dark-theme & {
+                    border: 4px solid #444;
+                }
+            }
+            img {
+                transition: transform .3s ease;
+            }
             img:hover{
                 cursor: zoom-in;
+                transform: scale(1.03)
             }
             margin-inline-start: 0;
             margin-inline-end: 0;
+            overflow: hidden;
         }
 
         .image-caption:not(:empty) {
