--- a/themes/KeepItNew/assets/css/_variables/default.scss
+++ b/themes/KeepItNew/assets/css/_variables/default.scss
@@ -1,7 +1,7 @@
 /** light theme **/
 
 $light-background-color: #fff;
-$light-nav-background-color: #eee;
+$light-nav-background-color: rgba(27,31,35,.08);
 
 $light-font-color: #161209;
 $light-font-secondary-color: #a9a9b3;
@@ -18,8 +18,10 @@ $light-pagination-link-color : #2d96bd;
 $light-pagination-link-active-color: #000;
 
 $light-border-color: #dcdcdc;
-$light-blockquote-background-color: rgb(241, 241, 241);
+$light-blockquote-background-color: rgb(246, 246, 246);
 $light-blockquote-side-color: #78C0A8;
+
+$light-code-bg-color: rgba(27,31,35,.05);
 
 
 
@@ -43,5 +45,7 @@ $dark-pagination-link-color : #a9a9b3;
 $dark-pagination-link-active-color: #fff;
 
 $dark-border-color: #4a4b50;
-$dark-blockquote-background-color: #424242;
+$dark-blockquote-background-color: #2b2c30;
 $dark-blockquote-side-color: rgb(224, 121, 169);
+
+$dark-code-bg-color: #3c3e4299;
