--- a/themes/KeepItNew/assets/css/_variables/default.scss
+++ b/themes/KeepItNew/assets/css/_variables/default.scss
@@ -1,7 +1,7 @@
 /** light theme **/
 
 $light-background-color: #fff;
-$light-nav-background-color: rgba(27,31,35,.08);
+$light-nav-background-color: #e9e9ec;
 
 $light-font-color: #161209;
 $light-font-secondary-color: #a9a9b3;
